--- a/css/jplayer.css
+++ b/css/jplayer.css
@@ -90,7 +90,7 @@ div.jp-controls-holder {
 }
 
 div.jp-interface ul.jp-controls {
-	background: url("jplayer.jpg") 0 0 no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0 0 no-repeat;
 	list-style-type:none;
 	padding: 1px 0 2px 1px;
 	overflow:hidden;
@@ -129,27 +129,27 @@ div.jp-type-single  .jp-controls li a{
 }
 
 div.jp-type-single  .jp-play {
-	background: url("jplayer.jpg") 0px -40px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -40px no-repeat;
 }
 
 div.jp-type-single  .jp-play:hover {
-	background: url("jplayer.jpg") -100px -40px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -100px -40px no-repeat;
 }
 
 div.jp-type-single  .jp-pause {
-	background: url("jplayer.jpg") 0px -120px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -120px no-repeat;
 }
 
 div.jp-type-single  .jp-pause:hover {
-	background: url("jplayer.jpg") -100px -120px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -100px -120px no-repeat;
 }
 
 div.jp-type-single  .jp-stop {
-	background: url("jplayer.jpg") 0px -80px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -80px no-repeat;
 }
 
 div.jp-type-single  .jp-stop:hover {
-	background: url("jplayer.jpg") -100px -80px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -100px -80px no-repeat;
 }
 
 /* @end */
@@ -161,43 +161,43 @@ div.jp-type-playlist .jp-controls li a{
 }
 
 div.jp-type-playlist .jp-play {
-	background: url("jplayer.jpg") -24px -40px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -24px -40px no-repeat;
 }
 
 div.jp-type-playlist .jp-play:hover {
-	background: url("jplayer.jpg") -124px -40px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -124px -40px no-repeat;
 }
 
 div.jp-type-playlist .jp-pause {
-	background: url("jplayer.jpg") -24px -120px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -24px -120px no-repeat;
 }
 
 div.jp-type-playlist .jp-pause:hover {
-	background: url("jplayer.jpg") -124px -120px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -124px -120px no-repeat;
 }
 
 div.jp-type-playlist .jp-stop {
-	background: url("jplayer.jpg") -24px -80px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -24px -80px no-repeat;
 }
 
 div.jp-type-playlist .jp-stop:hover {
-	background: url("jplayer.jpg") -124px -80px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -124px -80px no-repeat;
 }
 
 div.jp-type-playlist .jp-previous {
-	background: url("jplayer.jpg") -24px -200px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -24px -200px no-repeat;
 }
 
 div.jp-type-playlist .jp-previous:hover {
-	background: url("jplayer.jpg") -124px -200px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -124px -200px no-repeat;
 }
 
 div.jp-type-playlist .jp-next {
-	background: url("jplayer.jpg") -24px -160px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -24px -160px no-repeat;
 }
 
 div.jp-type-playlist .jp-next:hover {
-	background: url("jplayer.jpg") -124px -160px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -124px -160px no-repeat;
 }
 
 /* @end */
@@ -243,55 +243,55 @@ ul.jp-toggles li a{
 }
 
 .jp-full-screen {
-	background: url("jplayer.jpg") 0 -420px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0 -420px no-repeat;
 	margin-left: 20px;
 }
 
 .jp-full-screen:hover {
-	background: url("jplayer.jpg") -30px -420px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -30px -420px no-repeat;
 }
 
 .jp-restore-screen {
-	background: url("jplayer.jpg") -60px -420px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -60px -420px no-repeat;
 	margin-left: 20px;
 }
 
 .jp-restore-screen:hover {
-	background: url("jplayer.jpg") -90px -420px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -90px -420px no-repeat;
 }
 
 .jp-repeat {
-	background: url("jplayer.jpg") 0 -440px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0 -440px no-repeat;
 }
 
 .jp-repeat:hover {
-	background: url("jplayer.jpg") -30px -440px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -30px -440px no-repeat;
 }
 
 .jp-repeat-off {
-	background: url("jplayer.jpg") -60px -440px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -60px -440px no-repeat;
 }
 
 .jp-repeat-off:hover {
-	background: url("jplayer.jpg") -90px -440px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -90px -440px no-repeat;
 }
 
 .jp-shuffle {
-	background: url("jplayer.jpg") 0 -460px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0 -460px no-repeat;
 	margin-left: 5px;
 }
 
 .jp-shuffle:hover {
-	background: url("jplayer.jpg") -30px -460px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -30px -460px no-repeat;
 }
 
 .jp-shuffle-off {
-	background: url("jplayer.jpg") -60px -460px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -60px -460px no-repeat;
 	margin-left: 5px;
 }
 
 .jp-shuffle-off:hover {
-	background: url("jplayer.jpg") -90px -460px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -90px -460px no-repeat;
 }
 
 
@@ -301,11 +301,11 @@ ul.jp-toggles li a{
 
 /* The seeking class is added/removed inside jPlayer */
 div.jp-seeking-bg {
-	background: url("jplayer.seeking.gif");
+	background: url("../pict/jplayer/jplayer.seeking.gif");
 }
 
 .jp-progress {
-	background: url("jplayer.jpg") 0px -240px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -240px no-repeat;
 	width: 197px;
 	height: 13px;
 	padding: 0 2px 2px 2px;
@@ -322,7 +322,7 @@ div.jp-video .jp-progress {
 }
 
 .jp-seek-bar {
-	background: url("jplayer.jpg") 0px -260px repeat-x;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -260px repeat-x;
 	width:0px;
 	height: 100%;
 	overflow:hidden;
@@ -330,7 +330,7 @@ div.jp-video .jp-progress {
 }
 
 .jp-play-bar {
-	background: url("jplayer.jpg") 0px -280px repeat-x;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -280px repeat-x;
 	width:0px;
 	height: 100%;
 	overflow:hidden;
@@ -344,7 +344,7 @@ div.jp-video .jp-progress {
 div.jp-interface ul.jp-controls a.jp-mute,
 div.jp-interface ul.jp-controls a.jp-unmute,
 div.jp-interface ul.jp-controls a.jp-volume-max {
-	background: url("jplayer.jpg") 0px -330px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -330px no-repeat;
 	position: absolute;
 	width: 16px;
 	height: 11px;
@@ -374,27 +374,27 @@ div.jp-video ul.jp-controls a.jp-volume-max {
 }
 
 div.jp-interface ul.jp-controls a.jp-mute:hover {
-	background: url("jplayer.jpg") -25px -330px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -25px -330px no-repeat;
 }
 
 div.jp-interface ul.jp-controls a.jp-unmute {
-	background: url("jplayer.jpg") -60px -330px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -60px -330px no-repeat;
 }
 
 div.jp-interface ul.jp-controls a.jp-unmute:hover {
-	background: url("jplayer.jpg") -85px -330px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -85px -330px no-repeat;
 }
 
 div.jp-interface ul.jp-controls a.jp-volume-max {
-	background: url("jplayer.jpg") 0px -350px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -350px no-repeat;
 }
 
 div.jp-interface ul.jp-controls a.jp-volume-max:hover {
-	background: url("jplayer.jpg") -25px -350px no-repeat;
+	background: url("../pict/jplayer/jplayer.jpg") -25px -350px no-repeat;
 }
 
 .jp-volume-bar {
-	background: url("jplayer.jpg") 0px -300px repeat-x;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -300px repeat-x;
 	position: absolute;
 	width: 197px;
 	height: 4px;
@@ -421,7 +421,7 @@ div.jp-video .jp-volume-bar {
 }
 
 .jp-volume-bar-value {
-	background: url("jplayer.jpg") 0px -320px repeat-x;
+	background: url("../pict/jplayer/jplayer.jpg") 0px -320px repeat-x;
 	height: 4px;
 }
 
@@ -581,11 +581,11 @@ a.jp-video-play-icon {
 	left:50%;
 	top:50%;
 
-	background: url("jplayer.video.play.png") 0 0 no-repeat;
+	background: url("../pict/jplayer/jplayer.video.play.png") 0 0 no-repeat;
 	text-indent:-9999px;
 }
 div.jp-video-play:hover a.jp-video-play-icon {
-	background: url("jplayer.video.play.png") 0 -100px no-repeat;
+	background: url("../pict/jplayer/jplayer.video.play.png") 0 -100px no-repeat;
 }
 
 
